fix css post on mobile

--- a/frontend/web/less/mobile/landing.less
+++ b/frontend/web/less/mobile/landing.less
@@ -82,7 +82,7 @@ body{
     .right{
       /*float: right;*/
       position: absolute;
-      top: 20%;
+      top: 15%;
       right: 5%;
       color: #fff;
       font-size: 20px;
