--- a/frontend/web/less/mobile/post.less
+++ b/frontend/web/less/mobile/post.less
@@ -168,7 +168,7 @@
             }
         }
         .title_page{
-            width: 55%;
+            width: 50%;
             height: 40px;
             margin: auto;
             float: left;
@@ -191,7 +191,7 @@
         }
         .create_post{
             float: left;
-            width: 25%;
+            width: 30%;
             height: 40px;
             cursor: pointer;
             span{
